k8s/secure/deployment-secret-reference.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-secure
  template:
    metadata:
      labels:
        app: demo-app-secure
    spec:
      serviceAccountName: demo-app
      containers:
        - name: demo-app
          image: cr.yandex/example/demo-app:secure
