k8s/secure/network-test-denied.yaml
apiVersion: v1
kind: Pod
metadata:
  name: denied-client
  namespace: secure
  labels:
    role: denied-client
spec:
  restartPolicy: Never
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 10001
    runAsGroup: 10001
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: curl
      image: curlimages/curl:8.8.0
      command: ["sh", "-c"]
      args:
        - "curl -v --connect-timeout 5 http://10.112.128.11:8080 2>&1 || true"
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
