k8s/secure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-secure
  namespace: secure
spec:
  selector:
    app: demo-app-secure
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
